--- a/src/MovieLibrary.WebAPI/Properties/launchSettings.json
+++ b/src/MovieLibrary.WebAPI/Properties/launchSettings.json
@@ -20,6 +20,7 @@
     "MovieLibrary.WebAPI": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "api/values",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
